# codeforces-editorial-finder

./: .dockerignore  .env.example  Dockerfile  Justfile  README.md  docker-compose.yml  pyproject.toml
entrypoints/: run.sh
src/: config.py  main.py
src/application/: orchestrator.py
src/codeforces_editorial/parsers/: problem_page.py  url_parser.py
src/domain/: exceptions.py  models.py
src/domain/extractors/: editorial_extractor.py  markdown_formatter.py
src/domain/fetchers/: http_client.py  tutorial_finder.py
src/domain/openai/: client.py  prompts.py
src/domain/parsers/: problem_page.py  tutorial_parser.py  url_parser.py
src/domain/utils/: logger.py
src/infrastructure/: cache_redis.py  http_client.py  openai_client.py
src/presentation/: app.py  dependencies.py  exceptions.py  routes.py  schemas.py
tests/: problem_page_parser_test.py  tutorial_parser_test.py  url_parser_test.py
