[project]
name = "codeforces-editorial-finder"
version = "0.1.0"
description = "HTTP API to extract and format editorials for Codeforces problems"
requires-python = ">=3.10"
license = {text = "MIT"}
homepage = "https://github.com/deyna256/codeforces-editorial-finder"
repository = "https://github.com/deyna256/codeforces-editorial-finder"
documentation = "https://github.com/deyna256/codeforces-editorial-finder#readme"
authors = [
    {name = "deyna256", email = "deyna256@users.noreply.github.com"}
]
keywords = ["codeforces", "competitive-programming", "editorial", "api", "litestar"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "openai>=1.0.0",
    "curl-cffi>=0.7.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "loguru>=0.7.0",
    "tenacity>=8.2.0",
    "PyMuPDF>=1.23.0",
    "playwright>=1.40.0",
    "litestar>=2.0.0",
    "uvicorn[standard]>=0.27.0",
    "redis>=5.0.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "ty>=0.0.10",
]
